--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>계산기</title>
+    <title>calculator</title>
     <link rel="stylesheet" href="./style.css">
-    <script defer src="./script1.js"></script>
+    <script defer src="./custom.js"></script>
 </head>
 <body>
     <h1>Calculator</h1>
